# py-coding-agent

./: .env.example  .gitignore  LICENSE  README.md  README_Skills.md  docker-compose.yml  dockerfile  pyproject.toml
docs/: HOW-TO-SETUP-KEYS.md  architectural-diagram.md  design-summary.md  design.md  mcp-server-design-brainstorm.md
docs/adr/: ADR-001-safe-execution-of-tools.md  ADR-002-Dynamic-Tool-orchestration.md  ADR-003-Pi-mono-style-minimal-agent-loop.md  ADR-004-MCP-Server-updated.md  ADR-005-Multi-provider-support.md  ADR-006-Session-key-management.md  ADR-008-Smart-Provider-Routing.md  ADR-009-tight-binding-models.md  ADR-010-Agent-Skills-Layer.md  ADR‑007‑Dependency‑Locking‑Strategy.md
docs/skills/: README.md
mcp_servers/datetime/: Dockerfile  pyproject.toml
mcp_servers/datetime/datetime_mcp/: server.py  tool.py
py_mono/: config.py  main.py
py_mono/agent/: agent.backup_old.py  agent.backup_v1.py  agent.py
py_mono/llm/: base.py  litellm_provider.py  ollama_provider.py  prompts.py  provider_registry.py  tool_prompts.py  tool_schema.py
py_mono/mcp/: mcp_tool.py
py_mono/mcp_integration/: __init__.py  mcp_client.py  mcp_tool.py
py_mono/security/: key_manager.py
py_mono/session/: session_manager.py
py_mono/skill/: __init__.py  base.py
py_mono/skills/bug_fix/: SKILL.md  skill.py
py_mono/skills/hello/: SKILL.md  (+1 more)
py_mono/tools/: create_tool.py  edit_file.py  install_dependency.py  list_files.py  read_file.py  shell.py  tool.py  tool_loader.py  uv_tool.py  write_file.py
py_mono/ui/: cli.py
py_mono/utils/: path_utils.py  special_commands.py
(+4 files in other folders)
