[project]
name = "datetime-mcp"
version = "0.1.0"
description = "FastMCP datetime server for py-coding-agent"
requires-python = ">=3.10"

dependencies = [
    "fastmcp"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datetime_mcp*"]